# crex

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  parser.c  parser.h
